--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,2 +1,4 @@
 tasks:
-  - init: sudo apt update && sudo apt install -y libsdl2-dev && curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.31.0 && go get -v github.com/spf13/cobra/cobra && go get -v ./... && go test ./... && golangci-lint run
+  - init: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.31.0 && go get -v github.com/spf13/cobra/cobra && go get -v ./... && go test ./... && golangci-lint run
+image:
+  file: .gitpod/.gitpod.dockerfile
