--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,5 @@
+image:
+  file: .gitpod.dockerfile
+
 tasks:
   - init: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.31.0 && go get -v github.com/spf13/cobra/cobra && go get -v ./... && go test ./... && golangci-lint run
-image:
-  file: .gitpod/.gitpod.dockerfile
